--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
 <body>
 
 <header>
-  <h1>Bazar Huambo</h1>
-  <p>Compra e venda na cidade do Huambo</p>
+  <div class="banner">
+  <div class="overlay">
+    <h1>Bazar Huambo</h1>
+    <p>Compre e venda no Huambo</p>
+  </div>
+</div>
+
 </header>
 
 <main>
