--- a/index.html
+++ b/index.html
@@ -6,29 +6,37 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="banner">
-  <div class="overlay">
-    <h1>Bazar Huambo</h1>
-    <p>Compre e venda no Huambo</p>
+
+  <!-- BANNER -->
+  <div class="banner">
+    <div class="overlay">
+      <h1>Bazar Huambo</h1>
+      <p>Compre e venda na cidade do Huambo</p>
+    </div>
   </div>
-</div>
-<header>
-  
 
-</header>
+  <header>
+    <h2>Produtos disponíveis</h2>
+  </header>
 
-<main>
-  <h2>Produtos disponíveis</h2>
+  <main>
+    <div class="grid-produtos">
 
-  <div id="produtos" class="grid-produtos">
-    <!-- Produtos entram aqui -->
-  </div>
-</main>
+      <div class="produto">
+        <img src="imagem/huambo.jpg" alt="Produto exemplo">
+        <div class="info">
+          <h3>Produto Exemplo</h3>
+          <p>Preço sob consulta</p>
+          <a href="#">Contactar vendedor</a>
+        </div>
+      </div>
 
-<footer>
-  <p>© 2026 • Bazar Huambo</p>
-</footer>
+    </div>
+  </main>
 
-<script src="script.js"></script>
+  <footer>
+    <p>© 2026 Bazar Huambo</p>
+  </footer>
+
 </body>
 </html>
