--- a/index.html
+++ b/index.html
@@ -6,37 +6,29 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  <!-- BANNER -->
-  <div class="banner">
-    <div class="overlay">
-      <h1>Bazar Huambo</h1>
-      <p>Compre e venda na cidade do Huambo</p>
-    </div>
+<div class="banner">
+  <div class="overlay">
+    <h1>Bazar Huambo</h1>
+    <p>Compre e venda no Huambo</p>
   </div>
+</div>
+<header>
+  
 
-  <header>
-    <h2>Produtos disponíveis</h2>
-  </header>
+</header>
 
-  <main>
-    <div class="grid-produtos">
+<main>
+  <h2>Produtos disponíveis</h2>
 
-      <div class="produto">
-        <img src="imagem/huambo.jpg" alt="Produto exemplo">
-        <div class="info">
-          <h3>Produto Exemplo</h3>
-          <p>Preço sob consulta</p>
-          <a href="#">Contactar vendedor</a>
-        </div>
-      </div>
+  <div id="produtos" class="grid-produtos">
+    <!-- Produtos entram aqui -->
+  </div>
+</main>
 
-    </div>
-  </main>
+<footer>
+  <p>© 2026 • Bazar Huambo</p>
+</footer>
 
-  <footer>
-    <p>© 2026 Bazar Huambo</p>
-  </footer>
-
+<script src="script.js"></script>
 </body>
 </html>
