--- a/index.html
+++ b/index.html
@@ -6,29 +6,16 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<body>
+
 <div class="banner">
   <div class="overlay">
     <h1>Bazar Huambo</h1>
-    <p>Compre e venda no Huambo</p>
+    <p>Teste de banner</p>
   </div>
 </div>
-<header>
-  
 
-</header>
+</body>
 
-<main>
-  <h2>Produtos disponíveis</h2>
-
-  <div id="produtos" class="grid-produtos">
-    <!-- Produtos entram aqui -->
-  </div>
-</main>
-
-<footer>
-  <p>© 2026 • Bazar Huambo</p>
-</footer>
-
-<script src="script.js"></script>
 </body>
 </html>
