--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 
 <div class="banner">
+  <img src="imagem/huambo.jpg" style="width:100%">
   <div class="overlay">
     <h1>Bazar Huambo</h1>
     <p>Teste de banner</p>
