--- a/index.html
+++ b/index.html
@@ -8,13 +8,31 @@
 <body>
 <body>
 
-<div class="banner">
-  <img src="imagem/huambo.jpg" style="width:100%">
+div class="banner">
   <div class="overlay">
     <h1>Bazar Huambo</h1>
-    <p>Teste de banner</p>
+    <p>Compre e venda no Huambo</p>
   </div>
 </div>
+<header>
+  
+
+</header>
+
+<main>
+  <h2>Produtos disponíveis</h2>
+
+  <div id="produtos" class="grid-produtos">
+    <!-- Produtos entram aqui -->
+  </div>
+</main>
+
+<footer>
+  <p>© 2026 • Bazar Huambo</p>
+</footer>
+
+<script src="script.js"></script>
+
 
 </body>
 
